--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Recipes</title>
 </head>
 <body>
-Hello Boot!......
+<table>
+	<tr>
+		<th>ID</th>
+		<th>Descriptions</th>
+	</tr>
+	<tr th:each="recipe : ${recipes}">
+		<td th:text="${recipe.id}">123</td>
+		<td th:text="${recipe.description}">hello</td>
+	</tr>
+</table>
 </body>
 </html>
